// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignalTypeFilter /> component rendering matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignalTypeFilter
    counts={
      Object {
        "ALF": 359,
        "ALL": 72093,
        "ANALYTICS": 34300,
        "ONBOARDED": 37407,
        "REALTIME": 27,
      }
    }
    onSignalTypeChange={[MockFunction]}
    signalType="ALL"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Heading
          className={undefined}
          size={3}
        >
          Filter by Signal Type
        </Heading>,
        <TabList
          className={undefined}
          onChange={[Function]}
          orientation="vertical"
          quiet={false}
          value="ALL"
          variant=""
        >
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={true}
          >
            All (72093)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            Adobe Analytics (34300)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            Actionable Log Files (359)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            General Online Data (27)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            Onboarded Records (37407)
          </Tab>
        </TabList>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Filter by Signal Type",
          "className": undefined,
          "size": 3,
        },
        "ref": null,
        "rendered": "Filter by Signal Type",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={true}
            >
              All (72093)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Adobe Analytics (34300)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Actionable Log Files (359)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              General Online Data (27)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Onboarded Records (37407)
            </Tab>,
          ],
          "className": undefined,
          "onChange": [Function],
          "orientation": "vertical",
          "quiet": false,
          "value": "ALL",
          "variant": "",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "ALL",
            "nodeType": "class",
            "props": Object {
              "children": "All (72093)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": true,
            },
            "ref": null,
            "rendered": "All (72093)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ANALYTICS",
            "nodeType": "class",
            "props": Object {
              "children": "Adobe Analytics (34300)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "Adobe Analytics (34300)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ALF",
            "nodeType": "class",
            "props": Object {
              "children": "Actionable Log Files (359)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "Actionable Log Files (359)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "REALTIME",
            "nodeType": "class",
            "props": Object {
              "children": "General Online Data (27)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "General Online Data (27)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ONBOARDED",
            "nodeType": "class",
            "props": Object {
              "children": "Onboarded Records (37407)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "Onboarded Records (37407)",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Heading
            className={undefined}
            size={3}
          >
            Filter by Signal Type
          </Heading>,
          <TabList
            className={undefined}
            onChange={[Function]}
            orientation="vertical"
            quiet={false}
            value="ALL"
            variant=""
          >
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={true}
            >
              All (72093)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Adobe Analytics (34300)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Actionable Log Files (359)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              General Online Data (27)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Onboarded Records (37407)
            </Tab>
          </TabList>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Filter by Signal Type",
            "className": undefined,
            "size": 3,
          },
          "ref": null,
          "rendered": "Filter by Signal Type",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={true}
              >
                All (72093)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                Adobe Analytics (34300)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                Actionable Log Files (359)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                General Online Data (27)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                Onboarded Records (37407)
              </Tab>,
            ],
            "className": undefined,
            "onChange": [Function],
            "orientation": "vertical",
            "quiet": false,
            "value": "ALL",
            "variant": "",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "ALL",
              "nodeType": "class",
              "props": Object {
                "children": "All (72093)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": true,
              },
              "ref": null,
              "rendered": "All (72093)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ANALYTICS",
              "nodeType": "class",
              "props": Object {
                "children": "Adobe Analytics (34300)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "Adobe Analytics (34300)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ALF",
              "nodeType": "class",
              "props": Object {
                "children": "Actionable Log Files (359)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "Actionable Log Files (359)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "REALTIME",
              "nodeType": "class",
              "props": Object {
                "children": "General Online Data (27)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "General Online Data (27)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ONBOARDED",
              "nodeType": "class",
              "props": Object {
                "children": "Onboarded Records (37407)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "Onboarded Records (37407)",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<SignalTypeFilter /> component rendering renders <Tab /> component with correct label when props.count change 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignalTypeFilter
    counts={
      Object {
        "ALF": 100,
        "ALL": 1100,
        "ANALYTICS": 1000,
        "ONBOARDED": 0,
        "REALTIME": 0,
      }
    }
    onSignalTypeChange={[MockFunction]}
    signalType="ANALYTICS"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Heading
          className={undefined}
          size={3}
        >
          Filter by Signal Type
        </Heading>,
        <TabList
          className={undefined}
          onChange={[Function]}
          orientation="vertical"
          quiet={false}
          value="ANALYTICS"
          variant=""
        >
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            All (1100)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={true}
          >
            Adobe Analytics (1000)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            Actionable Log Files (100)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            General Online Data (0)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            Onboarded Records (0)
          </Tab>
        </TabList>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Filter by Signal Type",
          "className": undefined,
          "size": 3,
        },
        "ref": null,
        "rendered": "Filter by Signal Type",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              All (1100)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={true}
            >
              Adobe Analytics (1000)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Actionable Log Files (100)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              General Online Data (0)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Onboarded Records (0)
            </Tab>,
          ],
          "className": undefined,
          "onChange": [Function],
          "orientation": "vertical",
          "quiet": false,
          "value": "ANALYTICS",
          "variant": "",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "ALL",
            "nodeType": "class",
            "props": Object {
              "children": "All (1100)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "All (1100)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ANALYTICS",
            "nodeType": "class",
            "props": Object {
              "children": "Adobe Analytics (1000)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": true,
            },
            "ref": null,
            "rendered": "Adobe Analytics (1000)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ALF",
            "nodeType": "class",
            "props": Object {
              "children": "Actionable Log Files (100)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "Actionable Log Files (100)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "REALTIME",
            "nodeType": "class",
            "props": Object {
              "children": "General Online Data (0)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "General Online Data (0)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ONBOARDED",
            "nodeType": "class",
            "props": Object {
              "children": "Onboarded Records (0)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "Onboarded Records (0)",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Heading
            className={undefined}
            size={3}
          >
            Filter by Signal Type
          </Heading>,
          <TabList
            className={undefined}
            onChange={[Function]}
            orientation="vertical"
            quiet={false}
            value="ANALYTICS"
            variant=""
          >
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              All (1100)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={true}
            >
              Adobe Analytics (1000)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Actionable Log Files (100)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              General Online Data (0)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Onboarded Records (0)
            </Tab>
          </TabList>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Filter by Signal Type",
            "className": undefined,
            "size": 3,
          },
          "ref": null,
          "rendered": "Filter by Signal Type",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                All (1100)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={true}
              >
                Adobe Analytics (1000)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                Actionable Log Files (100)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                General Online Data (0)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                Onboarded Records (0)
              </Tab>,
            ],
            "className": undefined,
            "onChange": [Function],
            "orientation": "vertical",
            "quiet": false,
            "value": "ANALYTICS",
            "variant": "",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "ALL",
              "nodeType": "class",
              "props": Object {
                "children": "All (1100)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "All (1100)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ANALYTICS",
              "nodeType": "class",
              "props": Object {
                "children": "Adobe Analytics (1000)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": true,
              },
              "ref": null,
              "rendered": "Adobe Analytics (1000)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ALF",
              "nodeType": "class",
              "props": Object {
                "children": "Actionable Log Files (100)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "Actionable Log Files (100)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "REALTIME",
              "nodeType": "class",
              "props": Object {
                "children": "General Online Data (0)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "General Online Data (0)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ONBOARDED",
              "nodeType": "class",
              "props": Object {
                "children": "Onboarded Records (0)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "Onboarded Records (0)",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<SignalTypeFilter /> component rendering renders correctly selected <Tab /> component when props.signalType change 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignalTypeFilter
    counts={
      Object {
        "ALF": 359,
        "ALL": 72093,
        "ANALYTICS": 34300,
        "ONBOARDED": 37407,
        "REALTIME": 27,
      }
    }
    onSignalTypeChange={[MockFunction]}
    signalType="ANALYTICS"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Heading
          className={undefined}
          size={3}
        >
          Filter by Signal Type
        </Heading>,
        <TabList
          className={undefined}
          onChange={[Function]}
          orientation="vertical"
          quiet={false}
          value="ANALYTICS"
          variant=""
        >
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            All (72093)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={true}
          >
            Adobe Analytics (34300)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            Actionable Log Files (359)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            General Online Data (27)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            Onboarded Records (37407)
          </Tab>
        </TabList>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Filter by Signal Type",
          "className": undefined,
          "size": 3,
        },
        "ref": null,
        "rendered": "Filter by Signal Type",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              All (72093)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={true}
            >
              Adobe Analytics (34300)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Actionable Log Files (359)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              General Online Data (27)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Onboarded Records (37407)
            </Tab>,
          ],
          "className": undefined,
          "onChange": [Function],
          "orientation": "vertical",
          "quiet": false,
          "value": "ANALYTICS",
          "variant": "",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "ALL",
            "nodeType": "class",
            "props": Object {
              "children": "All (72093)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "All (72093)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ANALYTICS",
            "nodeType": "class",
            "props": Object {
              "children": "Adobe Analytics (34300)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": true,
            },
            "ref": null,
            "rendered": "Adobe Analytics (34300)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ALF",
            "nodeType": "class",
            "props": Object {
              "children": "Actionable Log Files (359)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "Actionable Log Files (359)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "REALTIME",
            "nodeType": "class",
            "props": Object {
              "children": "General Online Data (27)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "General Online Data (27)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ONBOARDED",
            "nodeType": "class",
            "props": Object {
              "children": "Onboarded Records (37407)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "Onboarded Records (37407)",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Heading
            className={undefined}
            size={3}
          >
            Filter by Signal Type
          </Heading>,
          <TabList
            className={undefined}
            onChange={[Function]}
            orientation="vertical"
            quiet={false}
            value="ANALYTICS"
            variant=""
          >
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              All (72093)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={true}
            >
              Adobe Analytics (34300)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Actionable Log Files (359)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              General Online Data (27)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Onboarded Records (37407)
            </Tab>
          </TabList>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Filter by Signal Type",
            "className": undefined,
            "size": 3,
          },
          "ref": null,
          "rendered": "Filter by Signal Type",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                All (72093)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={true}
              >
                Adobe Analytics (34300)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                Actionable Log Files (359)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                General Online Data (27)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                Onboarded Records (37407)
              </Tab>,
            ],
            "className": undefined,
            "onChange": [Function],
            "orientation": "vertical",
            "quiet": false,
            "value": "ANALYTICS",
            "variant": "",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "ALL",
              "nodeType": "class",
              "props": Object {
                "children": "All (72093)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "All (72093)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ANALYTICS",
              "nodeType": "class",
              "props": Object {
                "children": "Adobe Analytics (34300)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": true,
              },
              "ref": null,
              "rendered": "Adobe Analytics (34300)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ALF",
              "nodeType": "class",
              "props": Object {
                "children": "Actionable Log Files (359)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "Actionable Log Files (359)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "REALTIME",
              "nodeType": "class",
              "props": Object {
                "children": "General Online Data (27)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "General Online Data (27)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ONBOARDED",
              "nodeType": "class",
              "props": Object {
                "children": "Onboarded Records (37407)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "Onboarded Records (37407)",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
